--- a/a_config.json
+++ b/a_config.json
@@ -1,7 +1,6 @@
 {
   "versionCode":114,
   "versionName":"2.10.13",
-  "contentText":"Please update your app",
   "minSupport":114,
-  "url":"https://filat.homains.ee/s/29qnzB6EzRlaE8n/download"
+  "downloadUrl":"https://filat.homains.ee/s/29qnzB6EzRlaE8n/download"
 }
