--- a/a_config.json
+++ b/a_config.json
@@ -1,6 +1,4 @@
 {
   "versionCode":114,
-  "versionName":"2.10.13",
-  "minSupport":113,
-  "downloadUrl":"https://filat.homains.ee/s/29qnzB6EzRlaE8n/download"
+  "minSupport":113
 }
